[package]
name = "nrf-smartled"
version = "0.2.0"
description = "A Smart LED (WS2812) driver using hardware acceleration"
repository = "https://github.com/jamesmunns/nrf-smartled"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
readme = "README.md"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[dependencies]
nrf52810-hal = { version = "0.12.0", optional = true }
nrf52832-hal = { version = "0.12.0", optional = true }
nrf52840-hal = { version = "0.12.0", optional = true }
smart-leds-trait = "0.2.0"

[features]
52810 = ["nrf52810-hal"]
52832 = ["nrf52832-hal"]
52840 = ["nrf52840-hal"]

[package.metadata.docs.rs]
all-features = false
features = ["52840"]
